# my-edu

./: .gitignore  pyproject.toml  upload.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  runda_1-checkpoint.json
OPENCV/: 01_lekcja.ipynb
